fix: correct spacing issue by changing column-gap to row-gap

--- a/src/components/IconNavLinks/IconNavLinks.css
+++ b/src/components/IconNavLinks/IconNavLinks.css
@@ -1,7 +1,7 @@
 .nav__list {
     display: flex;
     flex-direction: column;
-    column-gap: 4rem;
+    row-gap: 4rem;
     list-style-type: none;
     align-items: center;
     padding: 0;
